--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,28 @@ nav {
   color: #161212;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px black;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #615a54;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .card {
   transition: all 0.5s ease-in-out;
 }
@@ -19,7 +41,7 @@ a {
 
 @media (min-width: 1200px) {
   #my-carousel img {
-    height: 80vh;
+    height: 90vh;
   }
 }
 
